<resources>
    <string name="app_name">My Community Events</string>
    <string name="activity_create_invitation">Create My Invitation</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="server_key">AAAAVRCSZOg:APA91bEhTBNmNFld6cVnn8lHvR2XVO0TQoRtcD8Q_iUelNG9zLH6_p6gPLPd64cpy0issHd_9qo6rzedFleinlTPWu9gPt_NTw-sbo7qGDt41XESLutNXT-8cDnrvy2Ib5emm629atLVeDmhQe8JbmE6IJ1I65Q2vQ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_khatamal_quran">Khatam al Quran</string>
    <string name="announcement_txt">This is a fun event for us.</string>
    <string name="txt_host_name">From %1$s</string>
    <string name="txt_guest_name">Guests</string>
    <string name="txt_location">location</string>
    <string name="time">time</string>
    <string name="date">date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_title_of_invitation">Title of the Invitation</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="registration_user">Join Community</string>
    <string name="submit_user">Submit</string>
    <string name="sign_in_user">Login</string>
    <string name="user_name">User Name</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="province">Province</string>
    <string name="home_phone">Home phone</string>
    <string name="cell_phone">Cell phone</string>
    <string name="work_phone">Work phone</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="community">community</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="do_save_user_info">Do want the system remember you</string>
    <string name="country">Country</string>
    <string name="join">Click to join</string>
    <string name="alert_dialog_ok">Select</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="fohtia">Fateah</string>
    <string name="txt_wedding_message">are getting married on</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="honor_messages">The honor of your presence is requested at the marriage of</string>
</resources>
