<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/join_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:visibility="visible"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/join_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="abs.j@gmail.com"
                    android:singleLine="true"
                    android:hint="some@gmail.com"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/join_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="1234567"
                    android:singleLine="true"
                    android:hint="@string/prompt_password"/>

            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/f_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:text="Najeeb"
                android:singleLine="true"
                android:hint="@string/first_name"/>

            <EditText
                android:id="@+id/join_l_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:text="Sakhizada"
                android:hint="@string/last_name"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/join_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:text="141 Cabinet crescents"
                android:hint="@string/address"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/join_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:text="Woodbridge"
                android:hint="@string/city"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/join_postal_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:maxLines="1"
                android:text="L4L6E7"
                android:hint="@string/postal_code"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/join_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/province"
                android:text="Ontario"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/join_home_pho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1"
                android:text="416 554 1881"
                android:hint="@string/home_phone"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/join_cell_pho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1"
                android:text="416 554 1881"
                android:hint="@string/cell_phone"
                android:singleLine="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/join_community"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:layout_weight="0.7"
                    android:inputType="text"
                    android:text="5c449aafe7179a7d1248bc95"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/join_age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:layout_weight="0.3"
                    android:hint="@string/age"
                    android:text="51"
                    android:singleLine="true"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</layout>