<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:hint="@string/community"
            android:text="@string/community"
            android:id="@+id/comm_item"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/join"
            android:id="@+id/join_community"
            android:layout_marginRight="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/comm_item"
            android:visibility="gone"
            android:id="@+id/ed_password"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/btn_submit_pass"
            app:layout_constraintTop_toBottomOf="@+id/ed_password"
            android:hint="@string/submit_user"/>


    </android.support.constraint.ConstraintLayout>
</layout>
