<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="visible"
            android:id="@+id/create_memoni_layout">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/create_khatam_al_quran_card"
                android:visibility="visible">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_title_of_invitation"
                    android:focusableInTouchMode="true"
                    android:paddingTop="30dp"
                    android:hint="@string/txt_title_of_invitation"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_host_name"
                    android:focusableInTouchMode="true"
                    android:layout_below="@+id/ed_title_of_invitation"
                    android:paddingTop="30dp"
                    android:hint="@string/txt_host_name"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_location_name"
                    android:paddingTop="30dp"
                    android:focusableInTouchMode="true"
                    android:layout_below="@+id/ed_host_name"
                    android:hint="@string/txt_location"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_location_address"
                    android:paddingTop="30dp"
                    android:focusableInTouchMode="true"
                    android:layout_below="@+id/ed_location_name"
                    android:hint="@string/txt_location"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_location_city"
                    android:paddingTop="30dp"
                    android:focusableInTouchMode="true"
                    android:layout_below="@+id/ed_location_address"
                    android:hint="@string/txt_location"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_date"
                    android:layout_below="@+id/ed_location_city"
                    android:hint="@string/date"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_time"
                    android:layout_below="@+id/ed_location_city"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/btn_date"
                    android:hint="@string/time"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/btn_date"/>
            </RelativeLayout>
        </ScrollView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="330dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/img_over_view"/>


    </android.support.constraint.ConstraintLayout>
</layout>