<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_tab"
        android:orientation="vertical"
        android:padding="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/scroller_view_preview"
            android:visibility="visible">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/wedding_card_preview_layout">

                <View
                    android:background="@drawable/bg_khatam_al_quran_preview"
                    android:id="@+id/bride_groom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/txt_title_bride_groom"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:hint="Jahn and marry"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/img_bride_groom"
                    android:background="@color/design_default_color_primary_dark"
                    android:src="@drawable/ic_launcher_background"
                    app:layout_constraintTop_toBottomOf="@id/txt_title_bride_groom"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:id="@+id/b_g_first_name_layout"
                    app:layout_constraintTop_toBottomOf="@id/img_bride_groom"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".45"
                        android:textSize="20sp"
                        android:id="@+id/txt_bride_first_name"
                        android:layout_marginStart="15dp"
                        tools:hint="@string/first_name"
                        android:layout_marginLeft="15dp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".45"
                        android:id="@+id/txt_groom_first_name"
                        android:textSize="20sp"
                        android:textColor="@color/pre_view_text_top_color"
                        android:paddingTop="30dp"
                        android:gravity="end"
                        tools:hint="@string/first_name"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_and"
                    android:layout_centerHorizontal="true"
                    app:layout_constraintTop_toBottomOf="@+id/b_g_first_name_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/b_g_last_name_layout"
                    android:weightSum="1"
                    app:layout_constraintTop_toBottomOf="@+id/b_g_first_name_layout"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".45"
                        android:textSize="20sp"
                        android:id="@+id/txt_bride_last_name"
                        android:layout_marginStart="15dp"
                        android:hint="@string/last_name"
                        android:layout_marginLeft="15dp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".45"
                        android:id="@+id/txt_groom_last_name"
                        android:textSize="20sp"
                        android:textColor="@color/pre_view_text_top_color"
                        android:paddingTop="30dp"
                        android:gravity="end"
                        tools:hint="@string/last_name"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:paddingTop="30dp"
                    android:id="@+id/txt_message"
                    app:layout_constraintTop_toBottomOf="@+id/b_g_last_name_layout"
                    android:textColor="@color/pre_view_text_top_color"
                    android:gravity="center_horizontal"
                    android:hint="@string/txt_wedding_message"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:paddingTop="30dp"
                    android:id="@+id/txt_date"
                    app:layout_constraintTop_toBottomOf="@+id/txt_message"
                    android:textColor="@color/pre_view_text_top_color"
                    android:gravity="center_horizontal"
                    android:layout_below="@+id/txt_message"
                    tools:hint="date"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:paddingTop="30dp"
                    android:id="@+id/txt_time"
                    android:textColor="@color/pre_view_text_top_color"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/txt_date"
                    tools:hint="Time"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:paddingTop="30dp"
                    android:textColor="@color/pre_view_text_top_color"
                    android:id="@+id/txt_name_of_place"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/txt_time"
                    tools:hint="Location"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:paddingTop="30dp"
                    android:textColor="@color/pre_view_text_top_color"
                    android:id="@+id/txt_address"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/txt_name_of_place"
                    tools:hint="Location"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:paddingTop="30dp"
                    android:textColor="@color/pre_view_text_top_color"
                    android:id="@+id/txt_city_of_postal_province"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/txt_address"
                    tools:hint="Location"/>

            </android.support.constraint.ConstraintLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>


</layout>